Fixed bug #46042 (memory leaks with reflection of mb_convert_encoding())