ext/mbstring/mbstring.c
@@ -17,7 +17,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: mbstring.c,v 1.224.2.22.2.25.2.31 2008/08/18 00:37:16 felipe Exp $ */
+/* $Id: mbstring.c,v 1.224.2.22.2.25.2.32 2008/09/10 23:19:38 iliaa Exp $ */
 
 /*
  * PHP 4 Multibyte String module "mbstring"
@@ -3117,7 +3117,7 @@ PHP_FUNCTION(mb_convert_encoding)
 			s_free = _from_encodings;
 			break;
 		default:
-			convert_to_string_ex(&arg_old);
+			convert_to_string(arg_old);
 			_from_encodings = Z_STRVAL_P(arg_old);
 			break;
 		}
@@ -3238,7 +3238,7 @@ PHP_FUNCTION(mb_detect_encoding)
 			}
 			break;
 		default:
-			convert_to_string_ex(&encoding_list);
+			convert_to_string(encoding_list);
 			if (!php_mb_parse_encoding_list(Z_STRVAL_P(encoding_list), Z_STRLEN_P(encoding_list), &list, &size, 0 TSRMLS_CC)) {
 				if (list) {
 					efree(list);
